compiler/testData/diagnostics/tests/annotations/AnnotationsForClasses.kt
annotation <!DEPRECATED_JAVA_ANNOTATION!>@java.lang.Deprecated<!> class my
annotation <!DEPRECATED_JAVA_ANNOTATION!>Deprecated<!> class my1